--- a/manifests/mongo-secret.yaml
+++ b/manifests/mongo-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
-  namespace: cloudchamp
+  namespace: voting-app
 data:
   username: YWRtaW4=
   password: cGFzc3dvcmQ=
