--- a/manifests/mongo-service.yaml
+++ b/manifests/mongo-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
-  namespace: cloudchamp
+  namespace: voting-app
   labels:
     role: db
     env: demo
